[gd_scene load_steps=51 format=3 uid="uid://k1nxlv42ukb"]

[ext_resource type="Texture2D" uid="uid://blub6yqrxtdf0" path="res://Assets/Asrael/AsraelSpriteSheet.png" id="1_7b88j"]
[ext_resource type="Script" uid="uid://cxmgi3ekrbii8" path="res://Scripts/asrael.gd" id="1_k205k"]
[ext_resource type="Script" uid="uid://cb3qy4d4v1vx7" path="res://Scripts/Classes/hitbox.gd" id="5_rbh43"]
[ext_resource type="Texture2D" uid="uid://ba0mtb21gyvh3" path="res://Assets/Asrael/Hearts.png" id="5_x3fhy"]
[ext_resource type="Script" uid="uid://dylpl26nm3gv1" path="res://Scripts/Classes/health.gd" id="6_bi4xx"]
[ext_resource type="SpriteFrames" uid="uid://dnjc0nnox370g" path="res://Tres/AsraelStab.tres" id="6_fcfmp"]
[ext_resource type="Texture2D" uid="uid://diy851nj4f0ft" path="res://Assets/Asrael/Shield.png" id="7_lxjk6"]
[ext_resource type="Texture2D" uid="uid://b0606qmktrjkd" path="res://Assets/light_halo.png" id="8_88br5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8jbiv"]
atlas = ExtResource("1_7b88j")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1gk2"]
atlas = ExtResource("1_7b88j")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_luwwj"]
atlas = ExtResource("1_7b88j")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2al0"]
atlas = ExtResource("1_7b88j")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujmj7"]
atlas = ExtResource("1_7b88j")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2ppw"]
atlas = ExtResource("1_7b88j")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppbaa"]
atlas = ExtResource("1_7b88j")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_85abf"]
atlas = ExtResource("1_7b88j")
region = Rect2(32, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcpt5"]
atlas = ExtResource("1_7b88j")
region = Rect2(64, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qklq"]
atlas = ExtResource("1_7b88j")
region = Rect2(96, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyxfc"]
atlas = ExtResource("1_7b88j")
region = Rect2(128, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc0l2"]
atlas = ExtResource("1_7b88j")
region = Rect2(160, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3gk2"]
atlas = ExtResource("1_7b88j")
region = Rect2(192, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypid0"]
atlas = ExtResource("1_7b88j")
region = Rect2(224, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk7uc"]
atlas = ExtResource("1_7b88j")
region = Rect2(256, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w24j0"]
atlas = ExtResource("1_7b88j")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y514o"]
atlas = ExtResource("1_7b88j")
region = Rect2(32, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qd1m"]
atlas = ExtResource("1_7b88j")
region = Rect2(64, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsrbm"]
atlas = ExtResource("1_7b88j")
region = Rect2(96, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_io2bs"]
atlas = ExtResource("1_7b88j")
region = Rect2(128, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytuug"]
atlas = ExtResource("1_7b88j")
region = Rect2(160, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqh4o"]
atlas = ExtResource("1_7b88j")
region = Rect2(192, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl1eb"]
atlas = ExtResource("1_7b88j")
region = Rect2(224, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmtqm"]
atlas = ExtResource("1_7b88j")
region = Rect2(256, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lti45"]
atlas = ExtResource("1_7b88j")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqym2"]
atlas = ExtResource("1_7b88j")
region = Rect2(32, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnemt"]
atlas = ExtResource("1_7b88j")
region = Rect2(0, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxsxw"]
atlas = ExtResource("1_7b88j")
region = Rect2(32, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_867qf"]
atlas = ExtResource("1_7b88j")
region = Rect2(64, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl8as"]
atlas = ExtResource("1_7b88j")
region = Rect2(96, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvgcl"]
atlas = ExtResource("1_7b88j")
region = Rect2(128, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ef6b"]
atlas = ExtResource("1_7b88j")
region = Rect2(160, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh6b3"]
atlas = ExtResource("1_7b88j")
region = Rect2(192, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jc6h"]
atlas = ExtResource("1_7b88j")
region = Rect2(224, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d57c1"]
atlas = ExtResource("1_7b88j")
region = Rect2(256, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q266"]
atlas = ExtResource("1_7b88j")
region = Rect2(0, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dumgr"]
atlas = ExtResource("1_7b88j")
region = Rect2(32, 96, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_s6npu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jbiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1gk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luwwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2al0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujmj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ppw")
}],
"loop": false,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppbaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85abf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcpt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qklq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyxfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc0l2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3gk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypid0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk7uc")
}],
"loop": false,
"name": &"ray",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w24j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y514o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qd1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsrbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io2bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytuug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqh4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl1eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmtqm")
}],
"loop": false,
"name": &"skull",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lti45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqym2")
}],
"loop": false,
"name": &"skull_pre",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnemt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxsxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_867qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl8as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvgcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ef6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh6b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jc6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d57c1")
}],
"loop": false,
"name": &"stab",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q266")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dumgr")
}],
"loop": false,
"name": &"stab_pre",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_00ovm"]
radius = 5.66
height = 32.02

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_05qx8"]
radius = 15.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3orbd"]
resource_local_to_scene = true
radius = 41.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kci4"]
size = Vector2(76.5, 79.5)

[node name="Asrael" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_k205k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_s6npu")
animation = &"stab_pre"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_00ovm")

[node name="Hearts" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(0, -56)
texture = ExtResource("5_x3fhy")
hframes = 2

[node name="HeartsParent" type="Node2D" parent="."]

[node name="Health" type="Node" parent="."]
script = ExtResource("6_bi4xx")
life = 40

[node name="AttackMoment" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="ShieldCooldown" type="Timer" parent="."]
one_shot = true

[node name="DieCooldown" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("5_rbh43")

[node name="AsraelCollision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -23)
shape = SubResource("CapsuleShape2D_05qx8")

[node name="ShieldCollison" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -23)
shape = SubResource("CircleShape2D_3orbd")
disabled = true
debug_color = Color(0.917, 0.287, 0, 0.218)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-17, 0)
sprite_frames = ExtResource("6_fcfmp")

[node name="StabDamageZone" type="Area2D" parent="AnimatedSprite2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D2/StabDamageZone"]
position = Vector2(-8, 8)
shape = SubResource("RectangleShape2D_0kci4")
disabled = true

[node name="Shield" type="Sprite2D" parent="."]
position = Vector2(0, -23)
texture = ExtResource("7_lxjk6")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -24)
enabled = false
texture = ExtResource("8_88br5")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="die" from="Health" to="." method="_on_health_die"]
[connection signal="life_change" from="Health" to="." method="_on_health_life_change"]
[connection signal="timeout" from="AttackMoment" to="." method="_on_attack_moment_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="ShieldCooldown" to="." method="_on_shield_cooldown_timeout"]
[connection signal="timeout" from="DieCooldown" to="." method="_on_die_cooldown_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_finished"]
[connection signal="area_entered" from="AnimatedSprite2D2/StabDamageZone" to="." method="_on_stab_damage_zone_area_entered"]
